Fix responsive section on small device

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,7 @@ body {
 }
 
 section {
-  padding: 7rem 2rem;
+  padding: 4rem 2rem;
   position: relative;
 
   @screen sm {
